--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
     "phpoffice/phpspreadsheet": "^1.17",
     "sunra/php-simple-html-dom-parser": "^1.5",
     "mashape/unirest-php": "^3.0",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
       "App\\": "App/",
-      "Query\\": "lib/phpQuery/phpQuery/"
+      "Query\\": "lib/phpQuery/phpQuery/",
+      "HTMLDOM\\": "lib/"
     }
   }
 }
